--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ version = '1.0'
 group = 'net.neverandy.moredyes' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'MoreDyes'
 
+tasks.named("processResources"){duplicatesStrategy = 'include'}
+
 java.toolchain.languageVersion = JavaLanguageVersion.of(8) // Mojang ships Java 8 to end users, so your mod should target Java 8.
 
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
@@ -156,7 +158,7 @@ jar {
 
 // Example configuration to allow publishing using the maven-publish task
 // This is the preferred method to reobfuscate your jar file
-jar.finalizedBy('reobfJar') 
+jar.finalizedBy('reobfJar')
 // However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
 //publish.dependsOn('reobfJar')
 
