--- a/build.gradle
+++ b/build.gradle
@@ -141,7 +141,10 @@ buildscript {
         // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
         // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
         // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-        minecraft 'net.minecraftforge:forge:1.16.5-36.2.22'
+        minecraft 'net.minecraftforge:forge:1.16.5-36.2.23'
+        runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.16.5-4.0.5.3")
+        compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.16.5-4.0.5.3:api")
+
 
         // You may put jars on which you depend on in ./libs or you may define them like so..
         // compile "some.group:artifact:version:classifier"
