--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -31,7 +31,7 @@ logoFile="moredyes.png" #optional
 # A text field displayed in the mod UI
 credits="Thanks for this example mod goes to Java" #optional
 # A text field displayed in the mod UI
-authors="awweaver" #optional
+authors="Naverene, Andyrew617" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
 a mod that adds more dyes to minecraft
